# backtesting_python

./: .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  BOT_API_GUIDE.md  CHANGELOG.md  Dockerfile  Dockerfile.replay  Live.plan.md  MANIFEST.INI  README.md  RELEASE.md  REPLAY_FINDINGS.md  Terminal.md  api_server.py  deploy.sh  docker-compose.yml  evolver_example.quick.yml  evolver_example.yml  example_backtest.yml  genes.yml  pyproject.toml  regime_example.yml  requirements-api.txt  run_5s_replay.py  run_example.py  run_parallel_example.py  sma_strategy.yml  strategy.yml  strategy_mean_revert.yml  strategy_momentum.yml  zma1_strat.yml
.agents/rules/: api-synchronization.md
.github/workflows/: pythonapp.yml
docs/: ACTION_ENGINE_PLAN.md  CHANGELOG.md  GETTING_STARTED.md  README.md  RELEASE.md  RUN_ANALYSIS_PLAN.md
fast_trade/: backtest_glue.py  build_data_frame.py  build_summary.py  cli.py  cli_helpers.py  cli_render.py  evaluate.py  finta.py  ftv.py  logic_utils.py  mcp_server.py  portfolio.py  run_analysis.py  run_backtest.py  simulated_broker.py  tasks.py  terminal_ui.py  validate_backtest.py
fast_trade/archive/: binance_api.py  cli.py  coinbase_api.py  db_helpers.py  update_archive.py  update_kline.py
fast_trade/ml/: evolver.py  markov.py  regime.py
fast_trade/services/: __init__.py  api.py  db.py  ingestor.py  serializers.py
fast_trade/summary/: __init__.py  metrics.py  trades.py
go-proxy/: Dockerfile  go.mod
go-proxy/cmd/server/: main.go
infra/dashboard/: Dockerfile  app.py
infra/db/: init.sql
infra/db/migrations/: 001_add_presets.sql  002_add_leverage_column.sql
infra/grafana/dashboards/: strategy_performance.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/grafana/provisioning/datasources/: timescaledb.yml
notebooks/: sample_backtest.ipynb
scripts/: profile_backtest_hotspots.py  replace_presets_and_backtest.py
strategy-lab/: index.html  package-lock.json  package.json  vite.config.ts
strategy-lab/src/: App.tsx
strategy-lab/src/components/: EquityChart.tsx  Leaderboard.tsx  OptimizePanel.tsx  StrategyEditor.tsx  StrategyForm.tsx  SummaryCards.tsx  TradesTable.tsx
strategy-lab/src/hooks/: useBacktest.ts  useHealthCheck.ts  useLeaderboard.ts  useOptimize.ts  usePresets.ts
strategy-lab/src/lib/: strategy.ts
strategy-lab/src/types/: api.ts
test/: test_api_server.py  test_build_data_frame.py  test_build_summary.py  test_evolver.py  test_mcp_server.py  test_new_accuracy_features.py  test_portfolio.py  test_run_backtest.py  test_simulated_broker.py  test_stop_loss.py
