[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-trade"
version = "1.0.3"
description = "Low code backtesting library utilizing pandas and technical analysis indicators"
readme = "README.md"
authors = [
    { name = "Jed Meier", email = "fast_trade@jedm.dev" }
]
license = { text = "GNU AGPLv3" }
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
keywords = ["backtesting", "currency", "ta", "pandas", "finance", "numpy", "analysis", "technical analysis"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "matplotlib>=3.7.0",
    "requests>=2.32.5",
    "numpy>=2.2.6",
    "pygad>=3.4.0",
    "hmmlearn>=0.3.3",
    "plotly>=5.22.0",
    "pyarrow>=16.0.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "prompt_toolkit>=3.0.43",
    "typer>=0.12.0"
]

[project.urls]
Homepage = "https://github.com/jrmeier/fast-trade"
Repository = "https://github.com/jrmeier/fast-trade"

[project.scripts]
ft = "fast_trade.cli:main"
ftv = "fast_trade.ftv:main"

[tool.setuptools]
packages = ["fast_trade", "fast_trade.archive"]
include-package-data = true

[tool.setuptools.package-data]
"fast_trade.archive" = ["*.py"] 
