[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-trade"
version = "2.0.0"
description = "Low code backtesting library utilizing pandas and technical analysis indicators"
readme = "README.md"
authors = [
    { name = "Jed Meier", email = "fast_trade@jedm.dev" }
]
license = { text = "GNU AGPLv3" }
classifiers = [
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
keywords = ["backtesting", "currency", "ta", "pandas", "finance", "numpy", "analysis", "technical analysis"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "numpy>=2.2.6",
    "pygad>=3.5.0",
    "hmmlearn>=0.3.3",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.2",
    "prompt_toolkit>=3.0.52",
    "typer>=0.23.0",
    "websockets>=16.0",
    "fastmcp>=2.14.5,<3"
]

[project.urls]
Homepage = "https://github.com/jrmeier/fast-trade"
Repository = "https://github.com/jrmeier/fast-trade"

[project.scripts]
ft = "fast_trade.cli:main"
ftv = "fast_trade.ftv:main"

[tool.setuptools]
packages = ["fast_trade", "fast_trade.archive", "fast_trade.summary", "fast_trade.ml", "fast_trade.services"]
include-package-data = true

[tool.setuptools.package-data]
"fast_trade.archive" = ["*.py"] 
